Changed paths method